# analisador-mecanica-corrida

./: .gitignore  README.md  pyproject.toml
mechanical/: main.py  utils.py
mechanical/analysis/: base.py  ocillation.py  posture.py  stride.py
